fix trade history

--- a/packages/augur-ui/src/modules/market/components/market-trade-history/market-trade-history.styles.less
+++ b/packages/augur-ui/src/modules/market/components/market-trade-history/market-trade-history.styles.less
@@ -15,7 +15,7 @@
     flex-direction: column;
     flex-grow: 1;
     overflow: overlay;
-    max-height: 50vh;
+    max-height: 80%;
 
     > span {
       .mono-10-medium;
